# immich-tools

./: .gitignore  .pre-commit-config.yaml  Dockerfile  api.py  archive_albums.py  archive_raws.py  compose.yml  crontab  log.py  main.py  pyproject.toml
.github/workflows/: docker-image.yml
src/: init.py  main.py
src/scripts/: archive_albums.py  archive_raws.py
