[project]
name = "immich-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D", # pydocstyle
    "CPY", # flake8-copyright
    "T20", # flake8-print
    "TD002", # dont require to/do link
    "TD003", # dont require to/do author
    "FIX002", # dont warn about TODOs in comments
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.8.6",
    "types-requests>=2.32.4.20250809",
]

[tool.mypy]
strict = true
