[project]
name = "immich-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=4.0.0a6",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D", # pydocstyle
    "CPY", # flake8-copyright
    "T20", # flake8-print
    "TD002", # dont require to/do link
    "TD003", # dont require to/do author
    "FIX002", # dont warn about TODOs in comments
    "G004", # f-strings in logging statements
]

[tool.uv]
package = true
dev-dependencies = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]

[tool.mypy]
strict = true
allow_redefinition = true
allow_redefinition_new = true
local_partial_types = true
